Implement database reset functionality and update Postman testing setup
- Added a new endpoint `/dev/reset` to reset the database and Cognito user pool, available only in QA and DEV environments.
- Introduced `resetDatabase` function in the database configuration to handle the reset logic.
- Updated the DevtoolsController to include the new reset functionality.
- Modified the Express middleware for improved error handling in authorization.
- Updated the `.gitignore` to exclude Postman environment files and test results.
- Replaced Newman with Postman CLI for running tests, updating the test scripts in `package.json` accordingly.
- Removed outdated test files and configurations to streamline the testing process.
